--- a/404.html
+++ b/404.html
@@ -5,12 +5,12 @@
     <title>Redirecting...</title>
     <script>
       // Only do this on GitHub Pages
-      if (location.hostname.includes("github.io")) {
-        // Extract full path after /pdf-kit
-        const redirectPath = location.pathname.replace('/pdf-kit', '') + location.search + location.hash;
-        const newUrl = '/pdf-kit/?redirect=' + encodeURIComponent(redirectPath);
-        location.replace(newUrl);
-      }
+    //   if (location.hostname.includes("github.io")) {
+    //     // Extract full path after /pdf-kit
+    //     const redirectPath = location.pathname.replace('/pdf-kit', '') + location.search + location.hash;
+    //     const newUrl = '/pdf-kit/?redirect=' + encodeURIComponent(redirectPath);
+    //     location.replace(newUrl);
+    //   }
     </script>
   </head>
   <body>
